@@ -7,6 +7,8 @@
     because of 'async' becoming a keyword in Python 3.7
   - replaced DataFrame.as_matrix() method (deprecated since Pandas 0.23.0) by 
     DataFrame.values
+  - replaced numpy.fromstring method (deprecated since NumPy 1.14) by 
+    numpy.frombuffer
 
 ------------------------------------------------------------------------------
   qPython 1.3.0 [2017.03.xx]
